# Ray-Tracer

./: CMakeLists.txt  ColorCalculator.h  main.cpp  readme.md  scene.h
headers/: camera.h  color.h  hittable.h  ray.h  vec3.h
objectParser/: OBJParser.h  behindWall.h  bottomWall.h  rightWall.h  test.cpp
objects/: Sphere.h  Square.h  hit_informations.h  light.h  material.h  mesh.h
parser/: CameraParser.h  LightParser.h  MaterialParser.h  OBJParser.h  ObjectParser.h  XMLParser.cpp  XMLParser.h  tinyxml2.cpp  tinyxml2.h
scene/: Sphere.h  camera.h  hit_informations.h  light.h  material.h  mesh.h
scenes/: example1.xml  personal_example.xml
utils/: color.h  ray.h  vec3.h
walls/: behindWall.h  bottomWall.h  rightWall.h
